# ZZGameMaker

./: Backlog ZZGameMaker.xlsx  CMakeLists.txt  README.md
src/: main.cpp
src/bloc/: bloc.cpp  bloc.hpp
src/character/: CMakeLists.txt  character.cpp  character.hpp  ennemy.cpp  ennemy.hpp  player.cpp  player.hpp
src/deco/: deco.cpp  deco.hpp
src/display/: CMakeLists.txt
src/display/enums/: assetsFiles.cpp  assetsFiles.hpp  colors.cpp  colors.hpp
src/display/interface/: editor.cpp  editor.hpp  mainWindow.cpp  mainWindow.hpp
src/display/interface/menus/: gameElementSelector.cpp  gameElementSelector.hpp  gameManager.cpp  gameManager.hpp
src/display/interface/menus/components/: gameElement.cpp  gameElement.hpp
src/display/interface/otherWindows/: closeConfirmationWindow.cpp  closeConfirmationWindow.hpp  errorWindow.cpp  errorWindow.hpp  helpWindow.cpp  helpWindow.hpp  newConfirmationWindow.cpp  newConfirmationWindow.hpp  openWindow.cpp  openWindow.hpp  saveWindow.cpp  saveWindow.hpp
src/display/interface/otherWindows/component/: confirmationPanel.cpp  confirmationPanel.hpp  pathSelector.cpp  pathSelector.hpp
src/display/interface/otherWindows/game_window/: mainGameWindow.cpp  mainGameWindow.hpp
src/display/interface/otherWindows/game_window/game_classes/: sfElement.cpp  sfElement.hpp  sfEnemy.cpp  sfEnemy.hpp  sfPlayer.cpp  sfPlayer.hpp
src/display/utils/: sprite.cpp  sprite.hpp
src/item/: item.cpp  item.hpp
src/map/: CMakeLists.txt  map.cpp  map.hpp
src/map/components/graphic/: case.cpp  case.hpp  caseStock.cpp  caseStock.hpp
src/map/components/physic/: map_element.cpp  map_element.hpp
src/misc/: CMakeLists.txt
src/misc/enums/: direction.hpp  type.cpp  type.hpp
src/misc/utils/: dimensions.hpp  hitbox.hpp
test/: catch.hpp  main_test.cpp
test/map/: hitbox.cpp  map_element.cpp
